--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -41,7 +41,7 @@ input {
 .navigation a {
   display: block;
   padding: 1em;
-  color: deepskyblue;
+  color: orange;
 }
 
 .navigation a:hover {
@@ -87,4 +87,58 @@ input {
   .navigation li:last-of-type a {
     border-bottom: none;
   }
+}
+
+.maintitle {
+  text-align: center;
+  font-size: 60px;
+  color: deepskyblue;
+}
+
+.subtitle {
+  text-align: center;
+  font-size: 20px;
+  color: deepskyblue;
+  font-weight: lighter;
+}
+
+div.container {
+  width:50%;
+  margin:1%;
+}
+
+table#table1 {
+  text-align:center;
+  margin-left:auto;
+  margin-right:auto;
+  width:100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  vertical-align:
+}
+
+table#table2 {
+  text-align:center;
+  margin-left:auto;
+  margin-right:auto;
+  width:100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+tr,td {text-align:center;}
+
+.transbox-header {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.6;
+    filter: alpha(opacity=60); /* For IE8 and earlier */
+}
+
+.transbox-header h1, h2 {
+		margin: 4%;
+		text-align: center;
 }
